# nolana

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix  justfile
.github/workflows/: ci.yml  release.yml
benches/: codegen.rs  parser.rs  sample.molang
examples/: full.rs  parser.rs  sample.molang  stats.rs
src/: ast.rs  ast_builder.rs  ast_impl.rs  codegen.rs  compiler.rs  diagnostic.rs  lib.rs  parser.rs  replace_with.rs  semantic.rs  span.rs  token.rs  transformer.rs  traverse.rs  visit.rs  visit_mut.rs
tests/: codegen.rs  compiler.rs  integration.rs  parser.rs  semantics.rs  transformer.rs
tests/codegen/: assignment.nolana  binary_and_unary.nolana  block.nolana  conditional.nolana  for_each.nolana  keyword.nolana  loop.nolana  parenthesized_complex.nolana  ternary.nolana
tests/integration/: codegen.rs  mod.rs  parser.rs  semantics.rs
tests/parser/: array_access.nolana  arrow_access.nolana  assignment.nolana  binary.nolana  block_undelimited.nolana  boolean.nolana  call_unclosed.nolana  conditional.nolana  for_each.nolana  for_each_in_expr.nolana  for_each_invalid_first_arg.nolana  keywords.nolana  loop_in_block.nolana  loop_with_expr.nolana  missing_semi_with_assignment.nolana  missing_semi_with_semi.nolana  parenthesized_complex.nolana  parenthesized_nested.nolana  parenthesized_unclosed.nolana  resource.nolana  semisemisemisemi.nolana  string.nolana  ternary.nolana  unary.nolana  unterminated_string.nolana  update.nolana  update_with_context.nolana  update_with_query.nolana  variable.nolana  variable_member_keyword.nolana
(+413 files in other folders)
