[package]
name = "nolana"
version = "1.0.0"
edition = "2021"
authors = ["arexon <arexonreal@gmail.com>"]
categories = ["parser-implementations", "compilers"]
description = "An extremely fast parser Molang parser."
repository = "https://github.com/arexon/nolana"
license = "MIT"

[dependencies]
logos = "0.15.0"
miette = "7.2.0"
oxc_allocator = "0.40.1"

[dev-dependencies]
criterion = "0.5.1"
insta = "1.41.1"
miette = { version = "7.2.0", features = ["fancy"] }

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "codegen"
harness = false
